--- a/flaskinventory/templates/records/newsource.html
+++ b/flaskinventory/templates/records/newsource.html
@@ -1,10 +1,15 @@
 {% extends "layout.html" %} {% block content %}
-        <div class="d-flex justify-content-center">
-            <div class="spinner-border text-primary my-5" id="loading-form" role="status">
-                <span class="visually-hidden">Loading...</span>
-            </div>
+    <div class="d-flex justify-content-center" id="loading-form">
+        <div class="align-self-start">
+                <div class="spinner-border text-primary my-5" role="status" id="loading-spinner">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
         </div>
-        <form id="new-source" autocomplete="off" autocorrect="off" spellcheck="false" style="display: none;">
+        <div class="ms-3 align-self-center">
+            <p id="loading-status" class="mb-0">Loading...</p>
+        </div>
+    </div>
+        <form id="new-source" autocomplete="off" autocorrect="off" spellcheck="false" hidden>
             <div class="progress my-4">
                 <div id="questionnaire-progress" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -35,6 +40,13 @@
                     <div id="name-feedback"></div>
                     </div>
                     <div id="group-transcript-kind" class="my-3 form-group">
+                        <div class="form-group mb-3">
+                            <label for="channel_url" class="form-label">What is the name of the website that provides tv, radio, or podcast scripts?</label>
+                            <small id="channel_url-helptext">Please specify the archive name or the direct URL (e.g., https://www.deutschlandfunk.de/die-nachrichten-nachlesen.1794.de.html; https://www.ndr.de/nachrichten/info/index.html)</small>
+                            <input name="channel_url" type="text" class="form-control" id="channel_url" placeholder="e.g. 'The Royal Gazette'" aria-describedby="channel_url-feedback" autocomplete="off">
+                        </div>
+                        <div id="channel_url-feedback"></div>
+
                         <p class="form-label">What kind of show is transcribed?</p>
 
                         <div class="form-check">
@@ -500,7 +512,7 @@
 
                 </div>
                 <input type="button" class="btn btn-primary prev" value="Previous Step">
-                <input type="submit" class="btn btn-success" value="Submit" />
+                <input type="button" id="submit-button" class="btn btn-success" value="Submit" />
             </fieldset>
             <div class="mb-3 d-flex flex-row-reverse">
                 <!-- <input type="reset" class="btn btn-danger" id="reset-form" value="Reset form" /> -->
@@ -586,8 +598,11 @@
                 url: targetUrl,
                 success: function(data) {
                     resolve(data); // Resolve promise and go to then()
-                    $('#loading-form').hide();
-                    $('#new-source').show();
+                    document.getElementById('loading-form').hidden = true
+                    document.getElementById('loading-spinner').hidden = true
+                    document.getElementById('loading-status').hidden = true
+                    document.getElementById('new-source').hidden = false
+   
                 },
                 error: function(err) {
                     reject(err) // Reject the promise and go to catch()
@@ -1080,12 +1095,58 @@
 
     const form = document.getElementById("new-source");
     form.noValidate = true;
-    form.addEventListener('submit', function handleFormSubmit(event) {
-        const isValid = form.reportValidity();
+
+    const submitButton = document.getElementById('submit-button')
+
+    async function successRedirect(redirect) {
+        await new Promise(r => setTimeout(r, 500));
+        location.assign(redirect)
+
+
+    }
+
+    function formResult(success, data) {
+        if (success) {
+
+                if ("error" in data) {
+
+                    document.getElementById('loading-spinner').classList.add('text-danger')
+                    document.getElementById('loading-spinner').classList.remove('text-primary')
+                    document.getElementById('loading-status').innerText = "We have a problem: " + data.error
+
+                }
+                else {
+                    document.getElementById('loading-spinner').classList.add('text-success')
+                    document.getElementById('loading-spinner').classList.remove('text-primary')
+                    document.getElementById('loading-status').innerText = "Success!"
+                    successRedirect(data.redirect)
+
+                }
+
+                
+            }
+            else {
+                document.getElementById('loading-spinner').classList.add('text-danger')
+                document.getElementById('loading-spinner').classList.remove('text-primary')
+                document.getElementById('loading-status').innerText = "Failed!"
+            }
+
+    }
+
+    submitButton.addEventListener('click', function handleFormSubmit(event) {
+        var isValid = form.reportValidity();
 
         if (isValid) {
+            event.preventDefault();
             // POST form data to backend with fetch
-            submitForm('{{ url_for("records.echo_json") }}', form);
+            document.getElementById('new-source').hidden = true
+            document.getElementById('loading-form').hidden = false
+            document.getElementById('loading-spinner').hidden = false
+            document.getElementById('loading-status').innerText = "Processing data..."
+            document.getElementById('loading-status').hidden = false
+            submitForm('{{ url_for("records.submit") }}', form, formResult);
+
+
             // window.location.assign('{{ url_for("records.confirmation") }}')
         };
 
@@ -1181,7 +1242,7 @@
     
 
 
-    function submitForm(endpoint, form) {
+    function submitForm(endpoint, form, callback) {
         var xhr = new XMLHttpRequest();
         var url = endpoint;
         xhr.open("POST", url, true);
@@ -1192,9 +1253,14 @@
                 if (xhr.status === 200) {
                 var json = JSON.parse(xhr.responseText);
                 console.log(json);
+                let success = true
+                 callback(success, json)
             }
             else {
                 console.log("error", xhr.statusText, xhr.responseText)
+                let success = false
+                var error = xhr.statusText
+                callback(success, error)
             }
         }
         };
