--- a/flaskinventory/templates/users/profile_sidebar.html
+++ b/flaskinventory/templates/users/profile_sidebar.html
@@ -3,7 +3,7 @@
         <span class="fs-5 fw-semibold">Tasks</span>
     </a>
     <div class="list-group">
-        <a href="{{ url_for('main.under_development') }}" type="button" class="list-group-item list-group-item-action">
+        <a href="{{ url_for('records.new_entry') }}" type="button" class="list-group-item list-group-item-action">
             <i class="fas fa-plus-circle me-3 fa-fw"></i>Add new entry
         </a>
         <a href="{{ url_for('main.under_development') }}" type="button" class="list-group-item list-group-item-action {% if current_user.user_role < 2 %}disabled{% endif %}"><i class="fas fa-glasses me-3 fa-fw"></i>Review Entries</a>
