--- a/flaskinventory/templates/users/update_profile.html
+++ b/flaskinventory/templates/users/update_profile.html
@@ -1,5 +1,9 @@
 {% extends "layout.html" %} {% block content %}
-<div class="content-section">
+
+
+<div class="content-section pt-4">
+<div class="row justify-content-center">
+<div class="col-6">
     <form method="POST" action="" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
         <fieldset class="form-group mb-3">
@@ -34,5 +38,7 @@
             {{ form.submit(class="btn btn-outline-info my-4") }}
         </div>
     </form>
+</div>
+</div>
 </div>
 {% endblock content %} {% block sidebar %} {% endblock sidebar %}
