fixed syntax error

--- a/flaskinventory/templates/records/newsource.html
+++ b/flaskinventory/templates/records/newsource.html
@@ -1155,7 +1155,7 @@
                 document.getElementById('loading-spinner').setAttribute('style', 'animation: unset;')
                 document.getElementById('loading-spinner').classList.remove('text-primary')
                 document.getElementById('loading-status').innerText = "Failed"
-                document.getElementById('loading-status-message').innerText = Server not responding!
+                document.getElementById('loading-status-message').innerText = "Server not responding!"
                 document.getElementById('btn-fail-goback').hidden = false
             }
 
